--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,8 +7,8 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$cyan-color};
-  --global-hover-color: #{$cyan-color};
+  --global-theme-color: #{$yellow-color};
+  --global-hover-color: #{$yellow-color};
   --global-footer-bg-color: #{$white-color};
   --global-footer-text-color: #{$white-color};
   --global-footer-link-color: #{$white-color};
