--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -35,5 +35,5 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light:     rgba($yellow-color, 0.05);
+$code-bg-color-light:     rgba($reen-color-bright, 0.05);
 $code-bg-color-dark:      #2c3237 !default;
