--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -31,9 +31,9 @@ $grey-900:            #212529;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
-
+s
 
 // Theme colors
 
-$code-bg-color-light:     rgba($reen-color-bright, 0.05);
+$code-bg-color-light:     rgba($green-color-bright, 0.05);
 $code-bg-color-dark:      #2c3237 !default;
